objects/Material__c.object
<CustomObject><fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <picklist>
            <picklistValues>
                <fullName>LABOUR RATE REVIEW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>For_Manufacture__c</fullName>
        <label>For Manufacture</label>
        <length>2</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Latest_Price__c</fullName>
        <label>Latest Price</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Makeup_Code__c</fullName>
        <label>Makeup Code</label>
        <picklist>
            <picklistValues>
                <fullName>CORE SHOOTER - WES CB22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FURNACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOULDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHELL CORE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <picklist>
            <picklistValues>
                <fullName>AMENITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPRENTICE TOOLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEARINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSTINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRILLS/MILLS/TAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FASTNERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FETTLING CONSUMABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOUNDRY CONSUMABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FURNACE ADDITIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FURNACE CONSUMABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLDERS/INSERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C SHOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C SHOP CONSUMABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON STEELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SUPPLIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAW MATERIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESALE ITEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFETY GEAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAND ADDITIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WELDING</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Material_History_Index__c</fullName>
        <label>Material History Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Spare5__c</fullName>
        <label>Spare5</label>
        <picklist>
            <picklistValues>
                <fullName>Mould</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <picklist>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Tax_Percent__c</fullName>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Material</label><nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Materials</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category_Code__c</columns>
        <columns>Latest_Price__c</columns>
        <columns>Material_Group__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Synchro_Index__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>